stats update - VI matchday

--- a/TimeWeighted1Liga.ipynb
+++ b/TimeWeighted1Liga.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -26,7 +26,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 34,
    "metadata": {
     "scrolled": false
    },
@@ -70,7 +70,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4de28461af3048d18a083e9ba4035eab",
+       "model_id": "d0ee879cbc2f4eafbf191b10e145f987",
        "version_major": 2,
        "version_minor": 0
       },
@@ -84,7 +84,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4cc6105b5a8c47a3aaf0bbe975a2f432",
+       "model_id": "15255908e6304de7a00896e82be5ef59",
        "version_major": 2,
        "version_minor": 0
       },
@@ -98,7 +98,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fd0d8daf52424851832b09b0a5403a3a",
+       "model_id": "b6bb995812204f95a68d44e3e6568b91",
        "version_major": 2,
        "version_minor": 0
       },
@@ -112,7 +112,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e11b1ccb5bd14832811de96ac696b15d",
+       "model_id": "92a1d419ea634392a958f7b41f68eae5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -124,14 +124,80 @@
      "output_type": "display_data"
     },
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                        0    1\n",
+      "0          Arka-Sosnowiec  1:1\n",
+      "1         Widzew-Sandecja  3:0\n",
+      "2  Polkowice-Podbeskidzie  1:1\n",
+      "3              Odra-Miedź  1:4\n",
+      "4        Katowice-Resovia  2:2\n",
+      "5               Tychy-ŁKS  1:1\n",
+      "6          Stomil-Chrobry  1:2\n",
+      "7             Korona-Skra  2:0\n",
+      "8      Jastrzębie-Puszcza  0:2\n",
+      "                    0    1\n",
+      "0      Korona-Puszcza  3:1\n",
+      "1            ŁKS-Skra  3:2\n",
+      "2       Resovia-Tychy  1:0\n",
+      "3      Miedź-Katowice  1:0\n",
+      "4   Podbeskidzie-Odra  0:3\n",
+      "5    Sosnowiec-Widzew  1:2\n",
+      "6   Jastrzębie-Stomil  1:0\n",
+      "7  Polkowice-Sandecja  0:2\n",
+      "8        Arka-Chrobry  0:2\n",
+      "                       0    1\n",
+      "0         Widzew-Chrobry  2:0\n",
+      "1    Polkowice-Sosnowiec  2:4\n",
+      "2          Odra-Sandecja  1:2\n",
+      "3  Katowice-Podbeskidzie  2:2\n",
+      "4            Tychy-Miedź  0:3\n",
+      "5            Puszcza-ŁKS  0:2\n",
+      "6            Stomil-Arka  0:1\n",
+      "7           Resovia-Skra  0:1\n",
+      "8      Korona-Jastrzębie  2:1\n",
+      "                    0    1\n",
+      "0       Stomil-Korona  0:1\n",
+      "1      ŁKS-Jastrzębie  2:2\n",
+      "2     Resovia-Puszcza  1:1\n",
+      "3          Miedź-Skra  1:1\n",
+      "4  Podbeskidzie-Tychy  0:0\n",
+      "5         Arka-Widzew  3:1\n",
+      "6   Katowice-Sandecja  0:0\n",
+      "7      Odra-Sosnowiec  1:0\n",
+      "8   Polkowice-Chrobry  0:0\n",
+      "                    0    1\n",
+      "0       Widzew-Stomil  2:0\n",
+      "1      Polkowice-Arka  2:1\n",
+      "2        Odra-Chrobry  1:0\n",
+      "3  Katowice-Sosnowiec  3:2\n",
+      "4      Tychy-Sandecja  2:1\n",
+      "5       Puszcza-Miedź  0:1\n",
+      "6  Jastrzębie-Resovia  1:1\n",
+      "7          Korona-ŁKS  1:0\n",
+      "8   Podbeskidzie-Skra  1:0\n",
+      "                      0    1\n",
+      "0            Stomil-ŁKS  0:3\n",
+      "1        Resovia-Korona  0:1\n",
+      "2      Miedź-Jastrzębie  1:1\n",
+      "3  Podbeskidzie-Puszcza  4:0\n",
+      "4         Sandecja-Skra  0:0\n",
+      "5       Sosnowiec-Tychy  1:2\n",
+      "6      Chrobry-Katowice  4:0\n",
+      "7             Arka-Odra  3:0\n",
+      "8      Widzew-Polkowice  4:2\n"
+     ]
+    },
+    {
      "ename": "ZeroDivisionError",
      "evalue": "float division by zero",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mZeroDivisionError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-9-e0af35a38112>\u001b[0m in \u001b[0;36mon_confirm_button_clicked\u001b[1;34m(b)\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mdef\u001b[0m \u001b[0mon_confirm_button_clicked\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mb\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m     \u001b[0mcalculate_weighted_stats\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mkolejka\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mvalue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m     \u001b[1;32mwith\u001b[0m \u001b[0moutput\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m         \u001b[0mdisplay_matchday\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mkolejka\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mvalue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m<ipython-input-7-9454d3090630>\u001b[0m in \u001b[0;36mcalculate_weighted_stats\u001b[1;34m(w)\u001b[0m\n\u001b[0;32m     50\u001b[0m         \u001b[0mhome_attack_strength\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mc\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mhas\u001b[0m \u001b[1;33m/\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0msum\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mweights_home\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0mavg_strzelone_dom_liga\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     51\u001b[0m         \u001b[0mhome_defence_strength\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mc\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mhds\u001b[0m \u001b[1;33m/\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0msum\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mweights_home\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0mavg_strzelone_wyjazd_liga\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 52\u001b[1;33m         \u001b[0maway_attack_strength\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mc\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0maas\u001b[0m \u001b[1;33m/\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0msum\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mweights_away\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0mavg_strzelone_wyjazd_liga\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     53\u001b[0m         \u001b[0maway_defence_strength\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mc\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mads\u001b[0m \u001b[1;33m/\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0msum\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mweights_away\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0mavg_strzelone_dom_liga\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-40-e0af35a38112>\u001b[0m in \u001b[0;36mon_confirm_button_clicked\u001b[1;34m(b)\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mdef\u001b[0m \u001b[0mon_confirm_button_clicked\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mb\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m     \u001b[0mcalculate_weighted_stats\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mkolejka\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mvalue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m     \u001b[1;32mwith\u001b[0m \u001b[0moutput\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m         \u001b[0mdisplay_matchday\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mkolejka\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mvalue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-38-ab62ab16d0b0>\u001b[0m in \u001b[0;36mcalculate_weighted_stats\u001b[1;34m(w)\u001b[0m\n\u001b[0;32m     49\u001b[0m                 \u001b[0mweights_away\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mweight\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     50\u001b[0m                 \u001b[0mweight\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mweight\u001b[0m\u001b[1;33m+\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 51\u001b[1;33m         \u001b[0mhome_attack_strength\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mc\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mhas\u001b[0m \u001b[1;33m/\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0msum\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mweights_home\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0mavg_strzelone_dom_liga\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     52\u001b[0m         \u001b[0mhome_defence_strength\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mc\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mhds\u001b[0m \u001b[1;33m/\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0msum\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mweights_home\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0mavg_strzelone_wyjazd_liga\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     53\u001b[0m         \u001b[0maway_attack_strength\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mc\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0maas\u001b[0m \u001b[1;33m/\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0msum\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mweights_away\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0mavg_strzelone_wyjazd_liga\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
       "\u001b[1;31mZeroDivisionError\u001b[0m: float division by zero"
      ]
     }
@@ -150,12 +216,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
     "strzelone_dom = {\n",
-    "    1: 12,    2: 10,    3: 9,    4: 0,    5: 0,    6: 0,    7: 0,    8: 0,    9: 0,    10: 0,\n",
+    "    1: 12,    2: 10,    3: 9,    4: 0,    5: 13,    6: 17,    7: 0,    8: 0,    9: 0,    10: 0,\n",
     "    11: 0,    12: 0,    13: 0,    14: 0,    15: 0,    16: 0,    17: 0,    18: 0,    19: 0,    20: 0,\n",
     "    21: 0,    22: 0,    23: 0,    24: 0,    25: 0,    26: 0,    27: 0,    28: 0,    29: 0,    30: 0,    \n",
     "    31: 0,     32: 0,    33: 0,     34 : 0\n",
@@ -164,12 +230,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
     "strzelone_wyjazd = {\n",
-    "    1: 13,    2: 12,    3: 16,    4: 0,    5: 0,    6: 0,    7: 0,    8: 0,    9: 0,    10: 0,\n",
+    "    1: 13,    2: 12,    3: 16,    4: 0,    5: 6,    6: 9,    7: 0,    8: 0,    9: 0,    10: 0,\n",
     "    11: 0,    12: 0,    13: 0,    14: 0,    15: 0,    16: 0,    17: 0,    18: 0,    19: 0,    20: 0,\n",
     "    21: 0,    22: 0,    23: 0,    24: 0,    25: 0,    26: 0,    27: 0,    28: 0,    29: 0,    30: 0,    \n",
     "    31: 0,     32: 0,    33: 0,     34 : 0\n",
@@ -178,16 +244,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
-    "mecze_liga = 3*9"
+    "mecze_liga = 5*9 + 8"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -324,7 +390,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.13"
+   "version": "3.7.5"
   }
  },
  "nbformat": 4,
