--- a/Poisson1Liga.ipynb
+++ b/Poisson1Liga.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -33,7 +33,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "metadata": {
     "scrolled": false
    },
@@ -84,7 +84,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f85f69eeebfd428d82ad8f87ab8a5645",
+       "model_id": "bb971c0056e34aef9e029a2f922b6df4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -98,7 +98,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a30371aca3514bf6a5e0d0fd360c7ae3",
+       "model_id": "58d6657370294ce5af98b0e45b7ebab3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -112,7 +112,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5d8d144285e24acaa5e39a210ec935fb",
+       "model_id": "5f555e63ad83406884a9a6a0904ad3c5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -126,7 +126,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0331b86f64644bbdbe0786cbf9a45541",
+       "model_id": "7603de78a6154d4f8abeffb07675e560",
        "version_major": 2,
        "version_minor": 0
       },
@@ -152,12 +152,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "strzelone_dom = {\n",
-    "    1: 12,    2: 10,    3: 9,    4: 8,    5: 13,    6: 17,    7: 0,    8: 11,    9: 0,    10: 0,\n",
+    "    1: 12,    2: 10,    3: 9,    4: 8,    5: 13,    6: 17,    7: 6,    8: 11,    9: 0,    10: 0,\n",
     "    11: 0,    12: 0,    13: 0,    14: 0,    15: 0,    16: 0,    17: 0,    18: 0,    19: 0,    20: 0,\n",
     "    21: 0,    22: 0,    23: 0,    24: 0,    25: 0,    26: 0,    27: 0,    28: 0,    29: 0,    30: 0,    \n",
     "    31: 0,     32: 0,    33: 0,     34 : 0\n",
@@ -166,12 +166,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "strzelone_wyjazd = {\n",
-    "    1: 13,    2: 12,    3: 16,    4: 6,    5: 6,    6: 9,    7: 4,    8: 16,    9: 0,    10: 0,\n",
+    "    1: 13,    2: 12,    3: 16,    4: 6,    5: 6,    6: 9,    7: 12,    8: 16,    9: 0,    10: 0,\n",
     "    11: 0,    12: 0,    13: 0,    14: 0,    15: 0,    16: 0,    17: 0,    18: 0,    19: 0,    20: 0,\n",
     "    21: 0,    22: 0,    23: 0,    24: 0,    25: 0,    26: 0,    27: 0,    28: 0,    29: 0,    30: 0,    \n",
     "    31: 0,     32: 0,    33: 0,     34 : 0\n",
@@ -180,18 +180,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "mecze_liga = 34*9 + 6*9 + 8 + 5\n",
+    "mecze_liga = 34*9 + 7*9 + 8\n",
     "avg_strzelone_dom_liga = (396 + sum(list(strzelone_dom.values())))/mecze_liga\n",
     "avg_strzelone_wyjazd_liga = (317 + sum(list(strzelone_wyjazd.values())))/mecze_liga"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,7 +313,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.6.13"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
