--- a/Poisson1Liga.ipynb
+++ b/Poisson1Liga.ipynb
@@ -84,7 +84,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bb971c0056e34aef9e029a2f922b6df4",
+       "model_id": "d87226f57faf4c7f9efee6b2c0221b68",
        "version_major": 2,
        "version_minor": 0
       },
@@ -98,7 +98,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "58d6657370294ce5af98b0e45b7ebab3",
+       "model_id": "640f24eff0fe4d449aa232843147d106",
        "version_major": 2,
        "version_minor": 0
       },
@@ -112,7 +112,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5f555e63ad83406884a9a6a0904ad3c5",
+       "model_id": "85ab849332b640818c416b620d5af172",
        "version_major": 2,
        "version_minor": 0
       },
@@ -126,7 +126,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7603de78a6154d4f8abeffb07675e560",
+       "model_id": "790b5c7ced014eb0974086633973fc49",
        "version_major": 2,
        "version_minor": 0
       },
@@ -157,7 +157,7 @@
    "outputs": [],
    "source": [
     "strzelone_dom = {\n",
-    "    1: 12,    2: 10,    3: 9,    4: 8,    5: 13,    6: 17,    7: 6,    8: 11,    9: 0,    10: 0,\n",
+    "    1: 12,    2: 10,    3: 9,    4: 8,    5: 13,    6: 17,    7: 6,    8: 11,    9: 10,    10: 0,\n",
     "    11: 0,    12: 0,    13: 0,    14: 0,    15: 0,    16: 0,    17: 0,    18: 0,    19: 0,    20: 0,\n",
     "    21: 0,    22: 0,    23: 0,    24: 0,    25: 0,    26: 0,    27: 0,    28: 0,    29: 0,    30: 0,    \n",
     "    31: 0,     32: 0,    33: 0,     34 : 0\n",
@@ -171,7 +171,7 @@
    "outputs": [],
    "source": [
     "strzelone_wyjazd = {\n",
-    "    1: 13,    2: 12,    3: 16,    4: 6,    5: 6,    6: 9,    7: 12,    8: 16,    9: 0,    10: 0,\n",
+    "    1: 13,    2: 12,    3: 16,    4: 6,    5: 6,    6: 9,    7: 12,    8: 16,    9: 9,    10: 0,\n",
     "    11: 0,    12: 0,    13: 0,    14: 0,    15: 0,    16: 0,    17: 0,    18: 0,    19: 0,    20: 0,\n",
     "    21: 0,    22: 0,    23: 0,    24: 0,    25: 0,    26: 0,    27: 0,    28: 0,    29: 0,    30: 0,    \n",
     "    31: 0,     32: 0,    33: 0,     34 : 0\n",
@@ -184,7 +184,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mecze_liga = 34*9 + 7*9 + 8\n",
+    "mecze_liga = 34*9 + 7*9 + 8 + 8\n",
     "avg_strzelone_dom_liga = (396 + sum(list(strzelone_dom.values())))/mecze_liga\n",
     "avg_strzelone_wyjazd_liga = (317 + sum(list(strzelone_wyjazd.values())))/mecze_liga"
    ]
@@ -313,7 +313,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.13"
+   "version": "3.7.5"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
