stats update, weighted stats improvement

--- a/TimeWeighted1Liga.ipynb
+++ b/TimeWeighted1Liga.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -26,7 +26,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 33,
    "metadata": {
     "scrolled": false
    },
@@ -70,7 +70,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "677927cfa5a046ca9963186d507737ee",
+       "model_id": "02f258e7f5b742bba2f6e17f0c14771d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -84,7 +84,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ab883ba722de43f4b69c75524716079d",
+       "model_id": "774f8e1f34f643f0a11b9694a08f1f19",
        "version_major": 2,
        "version_minor": 0
       },
@@ -98,7 +98,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7f524efe153e48c7acea612cbb11e2d6",
+       "model_id": "098a2d5e9fff4cda90238896ad645d46",
        "version_major": 2,
        "version_minor": 0
       },
@@ -112,7 +112,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7cc92dee5e9442e88c5df7e49d808f2c",
+       "model_id": "58b55de1156f4d7d8ba76f948bf6c818",
        "version_major": 2,
        "version_minor": 0
       },
@@ -138,13 +138,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
     "strzelone_dom = {\n",
     "    1: 12,    2: 10,    3: 9,    4: 8,    5: 13,    6: 17,    7: 6,    8: 11,    9: 10,    10: 17,\n",
-    "    11: 11,    12: 0,    13: 0,    14: 0,    15: 0,    16: 0,    17: 0,    18: 0,    19: 0,    20: 0,\n",
+    "    11: 11,    12: 6,    13: 0,    14: 0,    15: 0,    16: 0,    17: 0,    18: 0,    19: 0,    20: 0,\n",
     "    21: 0,    22: 0,    23: 0,    24: 0,    25: 0,    26: 0,    27: 0,    28: 0,    29: 0,    30: 0,    \n",
     "    31: 0,     32: 0,    33: 0,     34 : 0\n",
     "}"
@@ -152,13 +152,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
     "strzelone_wyjazd = {\n",
     "    1: 13,    2: 12,    3: 16,    4: 6,    5: 6,    6: 9,    7: 12,    8: 16,    9: 9,    10: 4,\n",
-    "    11: 14,    12: 0,    13: 0,    14: 0,    15: 0,    16: 0,    17: 0,    18: 0,    19: 0,    20: 0,\n",
+    "    11: 14,    12: 7,    13: 0,    14: 0,    15: 0,    16: 0,    17: 0,    18: 0,    19: 0,    20: 0,\n",
     "    21: 0,    22: 0,    23: 0,    24: 0,    25: 0,    26: 0,    27: 0,    28: 0,    29: 0,    30: 0,    \n",
     "    31: 0,     32: 0,    33: 0,     34 : 0\n",
     "}"
@@ -166,16 +166,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
-    "mecze_liga = 9*9 + 8 + 8"
+    "mecze_liga = 9*9 + 8 + 8 + 5"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,18 +216,19 @@
     "        aas = 0\n",
     "        ads = 0\n",
     "        for index, row in league.iterrows():\n",
-    "            home = row[0].split('-')[0]\n",
-    "            away = row[0].split('-')[1]\n",
-    "            if c==home:\n",
-    "                has += int(row[1].split(':')[0])*weight\n",
-    "                hds += int(row[1].split(':')[1])*weight\n",
-    "                weights_home.append(weight)\n",
-    "                weight = weight+1\n",
-    "            if c==away:\n",
-    "                aas += int(row[1].split(':')[1])*weight\n",
-    "                ads += int(row[1].split(':')[0])*weight\n",
-    "                weights_away.append(weight)\n",
-    "                weight = weight+1\n",
+    "            if row[1]!=\"#\":\n",
+    "                home = row[0].split('-')[0]\n",
+    "                away = row[0].split('-')[1]\n",
+    "                if c==home:\n",
+    "                    has += int(row[1].split(':')[0])*weight\n",
+    "                    hds += int(row[1].split(':')[1])*weight\n",
+    "                    weights_home.append(weight)\n",
+    "                    weight = weight+1\n",
+    "                if c==away:\n",
+    "                    aas += int(row[1].split(':')[1])*weight\n",
+    "                    ads += int(row[1].split(':')[0])*weight\n",
+    "                    weights_away.append(weight)\n",
+    "                    weight = weight+1\n",
     "        home_attack_strength[c] = has / (sum(weights_home)*avg_strzelone_dom_liga)\n",
     "        home_defence_strength[c] = hds / (sum(weights_home)*avg_strzelone_wyjazd_liga)\n",
     "        away_attack_strength[c] = aas / (sum(weights_away)*avg_strzelone_wyjazd_liga)\n",
@@ -236,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -268,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -282,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
