--- a/TimeWeighted1Liga.ipynb
+++ b/TimeWeighted1Liga.ipynb
@@ -70,7 +70,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d69128a6ea9047ef888c9231955f947f",
+       "model_id": "222f91a50e6a4f45a9d978ae91c3a9a5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -84,7 +84,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "83956b79908a43c887f16dd4ab19caff",
+       "model_id": "7086bb583cbd489aa1d5079809fbdd50",
        "version_major": 2,
        "version_minor": 0
       },
@@ -98,7 +98,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0e448d1aee954cc78c3d87d06f34306d",
+       "model_id": "372af71bd9114ee0932031bd169e9e90",
        "version_major": 2,
        "version_minor": 0
       },
@@ -112,7 +112,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b1333abf351844a1b000322b88214543",
+       "model_id": "9f94f121bc2446358484b660a0063e41",
        "version_major": 2,
        "version_minor": 0
       },
@@ -144,7 +144,7 @@
    "source": [
     "strzelone_dom = {\n",
     "    1: 12,    2: 10,    3: 9,    4: 8,    5: 13,    6: 17,    7: 6,    8: 11,    9: 10,    10: 17,\n",
-    "    11: 11,    12: 9,    13: 15,    14: 12,    15: 10,    16: 15,    17: 17,    18: 0,    19: 0,    20: 0,\n",
+    "    11: 11,    12: 10,    13: 15,    14: 12,    15: 10,    16: 15,    17: 17,    18: 16,    19: 13,    20: 0,\n",
     "    21: 0,    22: 0,    23: 0,    24: 0,    25: 0,    26: 0,    27: 0,    28: 0,    29: 0,    30: 0,    \n",
     "    31: 0,     32: 0,    33: 0,     34 : 0\n",
     "}"
@@ -157,8 +157,8 @@
    "outputs": [],
    "source": [
     "strzelone_wyjazd = {\n",
-    "    1: 13,    2: 12,    3: 16,    4: 6,    5: 6,    6: 10,    7: 12,    8: 16,    9: 9,    10: 4,\n",
-    "    11: 14,    12: 12,    13: 5,    14: 10,    15: 7,    16: 5,    17: 11,    18: 0,    19: 0,    20: 0,\n",
+    "    1: 13,    2: 12,    3: 16,    4: 6,    5: 6,    6: 10,    7: 12,    8: 16,    9: 11,    10: 4,\n",
+    "    11: 14,    12: 12,    13: 5,    14: 10,    15: 7,    16: 5,    17: 11,    18: 8,    19: 10,    20: 0,\n",
     "    21: 0,    22: 0,    23: 0,    24: 0,    25: 0,    26: 0,    27: 0,    28: 0,    29: 0,    30: 0,    \n",
     "    31: 0,     32: 0,    33: 0,     34 : 0\n",
     "}"
@@ -170,7 +170,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mecze_liga = 16*9 + 8 + 8"
+    "mecze_liga = 18*9 + 8"
    ]
   },
   {
