--- a/TimeWeightedEkstraklasa.ipynb
+++ b/TimeWeightedEkstraklasa.ipynb
@@ -144,7 +144,7 @@
    "source": [
     "strzelone_dom = {\n",
     "    1: 13,    2: 15,    3: 12,    4: 15,    5: 16,    6: 10,    7: 12,    8: 17,    9: 12,    10: 23,\n",
-    "    11: 10,    12: 20,    13: 10,    14: 9,    15: 15,    16: 19,    17: 16,    18: 12,    19: 0,    20: 0,\n",
+    "    11: 10,    12: 20,    13: 10,    14: 9,    15: 15,    16: 19,    17: 16,    18: 12,    19: 15,    20: 0,\n",
     "    21: 0,    22: 0,    23: 0,    24: 0,    25: 0,    26: 0,    27: 0,    28: 0,    29: 0,    30: 0,    \n",
     "    31: 0,     32: 0,    33: 0,     34 : 0\n",
     "}"
@@ -158,7 +158,7 @@
    "source": [
     "strzelone_wyjazd = {\n",
     "    1: 8,    2: 12,    3: 7,    4: 14,    5: 8,    6: 11,    7: 11,    8: 7,    9: 16,    10: 9,\n",
-    "    11: 10,    12: 13,    13: 12,    14: 9,    15: 12,    16: 7,    17: 14,    18: 9,    19: 0,    20: 0,\n",
+    "    11: 10,    12: 13,    13: 12,    14: 9,    15: 12,    16: 7,    17: 14,    18: 9,    19: 9,    20: 0,\n",
     "    21: 0,    22: 0,    23: 0,    24: 0,    25: 0,    26: 0,    27: 0,    28: 0,    29: 0,    30: 0,    \n",
     "    31: 0,     32: 0,    33: 0,     34 : 0\n",
     "}"
@@ -306,7 +306,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -320,7 +320,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
