--- a/TimeWeighted1Liga.ipynb
+++ b/TimeWeighted1Liga.ipynb
@@ -144,7 +144,7 @@
    "source": [
     "strzelone_dom = {\n",
     "    1: 12,    2: 10,    3: 9,    4: 8,    5: 13,    6: 17,    7: 6,    8: 11,    9: 10,    10: 17,\n",
-    "    11: 11,    12: 10,    13: 15,    14: 12,    15: 10,    16: 15,    17: 17,    18: 16,    19: 13,    20: 0,\n",
+    "    11: 11,    12: 10,    13: 15,    14: 12,    15: 10,    16: 15,    17: 17,    18: 16,    19: 13,    20: 15,\n",
     "    21: 0,    22: 0,    23: 0,    24: 0,    25: 0,    26: 0,    27: 0,    28: 0,    29: 0,    30: 0,    \n",
     "    31: 0,     32: 0,    33: 0,     34 : 0\n",
     "}"
@@ -158,7 +158,7 @@
    "source": [
     "strzelone_wyjazd = {\n",
     "    1: 13,    2: 12,    3: 16,    4: 6,    5: 6,    6: 10,    7: 12,    8: 16,    9: 11,    10: 4,\n",
-    "    11: 14,    12: 12,    13: 5,    14: 10,    15: 7,    16: 5,    17: 11,    18: 8,    19: 10,    20: 0,\n",
+    "    11: 14,    12: 12,    13: 5,    14: 10,    15: 7,    16: 5,    17: 11,    18: 8,    19: 10,    20: 7,\n",
     "    21: 0,    22: 0,    23: 0,    24: 0,    25: 0,    26: 0,    27: 0,    28: 0,    29: 0,    30: 0,    \n",
     "    31: 0,     32: 0,    33: 0,     34 : 0\n",
     "}"
@@ -170,7 +170,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mecze_liga = 18*9 + 8"
+    "mecze_liga = 18*9 + 8 + 8"
    ]
   },
   {
