--- a/TimeWeighted1Liga.ipynb
+++ b/TimeWeighted1Liga.ipynb
@@ -2,35 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<script>\n",
-       "code_show=true; \n",
-       "function code_toggle() {\n",
-       " if (code_show){\n",
-       " $('div.input').hide();\n",
-       " } else {\n",
-       " $('div.input').show();\n",
-       " }\n",
-       " code_show = !code_show\n",
-       "} \n",
-       "$( document ).ready(code_toggle);\n",
-       "</script>\n",
-       "<a href=\"javascript:code_toggle()\">Wyświetl kod</a>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from IPython.display import HTML\n",
     "HTML('''<script>\n",
@@ -50,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,68 +36,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "222f91a50e6a4f45a9d978ae91c3a9a5",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "FloatLogSlider(value=10000.0, description='Liczba symulacji', max=10.0, min=1.0, step=1.0, style=SliderStyle(d…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7086bb583cbd489aa1d5079809fbdd50",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "BoundedIntText(value=1, description='Wybierz kolejkę:', max=34, min=1, style=DescriptionStyle(description_widt…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "372af71bd9114ee0932031bd169e9e90",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Button(description='Zatwierdź', icon='check', style=ButtonStyle(), tooltip='Confirm')"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9f94f121bc2446358484b660a0063e41",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Output()"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "n = widgets.FloatLogSlider(value=10000, base=10, min=1, max=10, step=1, description='Liczba symulacji', style=style)\n",
     "kolejka = widgets.BoundedIntText(value=1, min=1, max=34, step=1, description='Wybierz kolejkę:', disabled=False, style=style)\n",
@@ -138,44 +55,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "strzelone_dom = {\n",
     "    1: 12,    2: 10,    3: 9,    4: 8,    5: 13,    6: 17,    7: 6,    8: 11,    9: 10,    10: 17,\n",
     "    11: 11,    12: 10,    13: 15,    14: 12,    15: 10,    16: 15,    17: 17,    18: 16,    19: 13,    20: 15,\n",
-    "    21: 0,    22: 0,    23: 0,    24: 0,    25: 0,    26: 0,    27: 0,    28: 0,    29: 0,    30: 0,    \n",
+    "    21: 9,    22: 0,    23: 0,    24: 0,    25: 0,    26: 0,    27: 0,    28: 0,    29: 0,    30: 0,    \n",
     "    31: 0,     32: 0,    33: 0,     34 : 0\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "strzelone_wyjazd = {\n",
     "    1: 13,    2: 12,    3: 16,    4: 6,    5: 6,    6: 10,    7: 12,    8: 16,    9: 11,    10: 4,\n",
     "    11: 14,    12: 12,    13: 5,    14: 10,    15: 7,    16: 5,    17: 11,    18: 8,    19: 10,    20: 7,\n",
-    "    21: 0,    22: 0,    23: 0,    24: 0,    25: 0,    26: 0,    27: 0,    28: 0,    29: 0,    30: 0,    \n",
+    "    21: 11,    22: 0,    23: 0,    24: 0,    25: 0,    26: 0,    27: 0,    28: 0,    29: 0,    30: 0,    \n",
     "    31: 0,     32: 0,    33: 0,     34 : 0\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "mecze_liga = 18*9 + 8 + 8"
+    "mecze_liga = 19*9 + 8 + 8"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -269,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -299,7 +216,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -313,7 +230,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.7.11"
   }
  },
  "nbformat": 4,
