--- a/TimeWeighted1Liga.ipynb
+++ b/TimeWeighted1Liga.ipynb
@@ -75,7 +75,7 @@
    "source": [
     "strzelone_wyjazd = {\n",
     "    1: 13,    2: 12,    3: 16,    4: 6,    5: 6,    6: 10,    7: 12,    8: 16,    9: 11,    10: 4,\n",
-    "    11: 14,    12: 12,    13: 5,    14: 10,    15: 7,    16: 5,    17: 11,    18: 8,    19: 10,    20: 7,\n",
+    "    11: 14,    12: 12,    13: 5,    14: 10,    15: 7,    16: 5,    17: 11,    18: 8,    19: 13,    20: 7,\n",
     "    21: 11,    22: 8,    23: 11,    24: 0,    25: 0,    26: 0,    27: 0,    28: 0,    29: 0,    30: 0,    \n",
     "    31: 0,     32: 0,    33: 0,     34 : 0\n",
     "}"
@@ -87,7 +87,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mecze_liga = 22*9 + 8"
+    "mecze_liga = 23*9"
    ]
   },
   {
